--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-        "api/index.js": {
+        "api/bot.js": {
             "memory": 1024,
             "maxDuration": 10
         }
