--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     
     "functions": {
-        "bot.js": {
+        "api/bot.js": {
             "memory": 1024,
             "maxDuration": 10
         }
@@ -10,7 +10,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "bot.js"
+        "dest": "api/bot.js"
       }
     ]
   }
