--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,12 @@
       "memory": 1024,
       "maxDuration": 10
     }
-  }
+  },
+  "version": 2,
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/bot.js"
+    }
+  ]
 }
